GNOME Bugzilla – Bug 731511
typo in error messages "colon are forbidden from..." in parser.c
Last modified: 2014-07-26 20:43:38 UTC
The parser.c file has 3 error messages starting with "colon are forbidden from". It should be "colons are" or "colon is".
Okay, fixed in git head, thanks for raising this Vincent ! Daniel