typo in error messages "colon are forbidden from..."

For https://bugzilla.gnome.org/show_bug.cgi?id=731511
Pointed byt vincent Lefevre